# datatrails-scitt-samples

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  Taskfile.yml  example-commit  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  hello.yml  merge-requires.yml  package.yml  python-package.yml  registration-demo.yml
acs-openssl-commands/: sign.sh  verify.sh
datatrails_scitt_samples/: __init__.py  cbor_header_labels.py  cose_cnf_key.py  cose_receipt_verification.py  cose_sign1message.py  dump_cbor.py  statement_creation.py  statement_registration.py
datatrails_scitt_samples/artifacts/: package.json
datatrails_scitt_samples/datatrails/: apitoken.py  entryid.py  envconfig.py  eventpreimage.py  servicecontext.py  v3eventhash.py
datatrails_scitt_samples/mmriver/: algorithms.py  decodeinclusionproof.py
datatrails_scitt_samples/scripts/: check_operation_status.py  create_hashed_signed_statement.py  create_signed_statement.py  datatrails_event_info.py  dump_cbor.py  fileaccess.py  generate_example_key.py  register_signed_statement.py  verify_receipt.py
scitt/: __init__.py  cbor_header_labels.py  check_operation_status.py  cose_cnf_key.py  cose_receipt_verification.py  cose_sign1message.py  create_detatched_signed_statement.py  create_hashed_signed_statement.py  create_signed_statement.py  decode_event.py  dump_cbor.py  errors.py  register_signed_statement.py  statement_creation.py  statement_registration.py  verify_receipt_signature.py
scitt/artifacts/: thedroid.json
scitt/datatrails/: apitoken.py  entryid.py  envconfig.py  eventpreimage.py  servicecontext.py  v3eventhash.py
scitt/mmriver/: algorithms.py  decodeinclusionproof.py  inclusionproof.py
scitt/scripts/: check_operation_status.py  create_hashed_signed_statement.py  create_signed_statement.py  datatrails_event_info.py  fileaccess.py  fileacess.py  generate_example_key.py  register_signed_statement.py  verify_receipt.py.disabled
tests/: constants.py  test_create_hashed_signed_statement.py  test_create_signed_statement.py  test_register_signed_statement.py  test_verify_receipt.py  test_verify_receipt_bad_options.py  test_verify_receipt_signature.py
tests/resources/: scitt-receipt.cbor
unittests/: __init__.py  constants.py  create_options.py  test_create_hashed_signed_statement.py  test_create_signed_statement.py  test_register_signed_statement.py  test_verify_receipt_signature.py
