[options]
packages =
    datatrails_scitt_samples
    datatrails_scitt_samples.datatrails
    datatrails_scitt_samples.mmriver
    datatrails_scitt_samples.scripts
    datatrails_scitt_samples.artifacts
include_package_data = True
setup_requires =
    setuptools-git-versioning
    setuptools_scm

[pycodestyle]
ignore = E128, E203, E225, E265, E266, E402, E501, E713, E722, E741, W504, W503
statistics = True
max-line-length = 88

[metadata]
name = datatrails-scitt-samples
use_scm_version = True
author = DataTrails Inc.
author_email = support@datatrails.ai
description = DataTrails SCITT Examples
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/datatrails/datatrails-scitt-samples
license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Utilities

project_urls =
    Source = https://github.com/datatrails/datatrails-scitt-samples
    Tracker = https://github.com/datatrails/datatrails-scitt-samples/issues

[options.entry_points]
console_scripts =
    datatrails-sciit-demo-generate-example-key = datatrails_scitt_samples.scripts.generate_example_key:main
    check-operation-status = datatrails_scitt_samples.scripts.check_operation_status:main
    create-signed-statement = datatrails_scitt_samples.scripts.create_signed_statement:main
    create-hashed-signed-statement = datatrails_scitt_samples.scripts.create_hashed_signed_statement:main
    register-signed-statement = datatrails_scitt_samples.scripts.register_signed_statement:main
    verify-receipt = datatrails_scitt_samples.scripts.verify_receipt:main
    datatrails-event-info = datatrails_scitt_samples.scripts.datatrails_event_info:main
